--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
       </div>
       <div class="cardInside">
         <h3 class="back">HAPPY BIRTHDAY</h3>
-        <p>Dear Friend,</p>
+        <p>Haii Viraa,</p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-          expedita debitis esse quaerat adipisci iste illum placeat incidunt
-          reprehenderit laudantium!
+          selamat ulang tahun selamat bertambah usia makin sabar,kuat dan doa terbaik untukkmu, 
+semoga diumur sekarang semesta berpihak ya sama kamu, semoga bisa depetin hal yang selama ini diperjuangin,
+semoga bahagia dan semoga itu selamanya, best wishes for spesial people.
         </p>
-        <p class="name">xxx</p>
       </div>
     </div>
   </body>
